-Added Lübeck missions from Lions of the North
-Added Italian Minor missions from 1.30
-Added factions to Jerusalem: the Patriarchate, the Settlers, the Barons; Jerusalem now gets a parliament
-Added the following new mercenary companies: Castilian Caballeros
-Added a decision for Catholic theocracies to change their Tier 1 reform for the cost of papal influence
-Gave Circassia access to reskinned Mossi mechanics from Origins
-Gave Volga Bulgaria access to reskinned Jolof mechanics from Origins
-Gave East Slavic nations access to the 'Tolerance of Folk Religions' estate privilege
-Spanish Holy Order Mercenaries no longer reduce army professionalism
-Other minor localization/bug fixes

# v 2.2.8 #

-Updated the mod to EU4 version 1.34
-Added the following new National Idea sets: Frei Verdun, Brixen
-Added the following government reforms: Saqaliba State, Nakharar System
-Added events for the pirates of Sercq and Cilicia
-Added Norse missions from Lions of the North
-Added Westphalian, Hanoverian and Franconian missions from 1.30
-Gave Jerusalem access to reskinned Cawa regiments
-Byantium has now access to appanages; they will start with some in 1054
-Added trade companies to the mod
-Khwarezm is now a proper tag with its own culture
-Added a 6th reform to the Kievan Rus (thus making it match with vanilla's EoC)
-Passing all reforms as the Grand Prince no longer annexes all appanages. They will have to be annexed individually by spending Fraternity (thus making it match with vanilla's EoC)
-Certain monuments can now be used by countries with corresponding secondary/harmonized faiths
-Added the following alternative country names: Amida (Mardin), Barghawata (Marrakesh), Taronites (Sasun)
-Fixed a longstanding bug causing a crash when trying to recruit janissaries (many thanks to Advocatus Diaboli)
-The Germanica Slavica incident can now properly cause the conversion of Pagan nations
-Decreased the amount of recruitalbe banners