@@ -7691,7 +7691,7 @@ estate_nobles_golden_liberty = {
 					NOT = { has_reform = elective_monarchy }
 				}
 				has_reform = polish_autocratic_monarchy
-				mission_completed = plc_golden_liberty
+				#mission_completed = plc_golden_liberty
 				absolutism = 70
 				AND = {
 					is_year = 1615
