@@ -1962,11 +1962,14 @@ has_exempt_from_seize_land_for_estate_nobles = {
 	OR = {
 		has_estate_privilege = estate_nobles_levies
 		has_estate_privilege = estate_nobles_golden_liberty
-		has_estate_privilege = estate_nobles_emboldened_aristocrats
+		#Jolof's starting privileges
+		has_estate_privilege = estate_nobles_decentralized_tribe
+		has_estate_privilege = estate_nobles_tribe_unification
 		#Norway's starting privileges
 		has_estate_privilege = estate_nobles_danish_nobility
 		has_estate_privilege = estate_nobles_nobles_instead_of_royal_court
-	
+		#mod
+		has_estate_privilege = estate_nobles_emboldened_aristocrats
 	}
 }
 has_exempt_from_seize_land_for_estate_brahmins = {
