@@ -6261,3 +6261,93 @@ country_event = {
 		}
 	}
 }
+
+country_event = {
+	id = fbievents.154
+	title = "FBIT154"
+	desc = "FBID154"
+	picture = BAD_WITH_MONARCH_eventPicture
+	
+	fire_only_once = yes
+	major = yes
+
+	trigger = {
+		government = monarchy
+		is_emperor_of_china = no
+		has_regency = yes
+		num_of_cities = 10
+		normal_or_historical_nations = yes
+		NOT = { started_in = 1370.11.5 }
+		OR = {
+			tag = POL
+			tag = PLC
+		}
+	}
+	
+	mean_time_to_happen = {
+		months = 120	
+		modifier = {
+			factor = 0.9
+			NOT = { legitimacy = 90 }
+		}
+		modifier = {
+			factor = 0.9
+			NOT = { legitimacy = 70 }
+		}
+		modifier = {
+			factor = 0.9
+			NOT = { legitimacy = 50 }
+		}
+		modifier = {
+			factor = 0.5
+			is_excommunicated = yes
+		}
+		modifier = {
+			factor = 0.75
+			num_of_revolts = 1
+		}
+		modifier = {
+			factor = 0.5
+			NOT = {
+				estate_loyalty = {
+					estate = estate_nobles
+					loyalty = 40
+				}
+			}
+		}
+	}
+
+	immediate = {
+		hidden_effect = {
+			random_owned_province = {
+				limit = {
+					is_capital = no
+					controlled_by = owner
+				}
+				save_event_target_as = polish_noble_revolt
+			}
+		}
+	}
+	
+	option = {
+		name = "FBIA154"
+		ai_chance = { factor = 95 }
+		change_government = monarchy
+		add_government_reform = polish_great_sejm
+		add_reform_progress_medium_effect = yes
+		add_stability = -1
+	}
+	option = {
+		name = "FBIB154"
+		ai_chance = { factor = 5 }
+		goto = polish_noble_revolt
+		add_legitimacy = 20
+		event_target:english_noble_revolt = {
+			spawn_rebels = {
+				type = noble_rebels
+				size = 4
+				win = yes
+			}
+		}
+	}
+}
