@@ -2611,6 +2611,10 @@
  FBIB153: "Take the Cross"
  FBIC153: "Become a Bishopric"
  FBIDD153: "Cancel reorganization"
+ FBIT154: "A Great Sejm For [Root.GetName]?"
+ FBID154: "With the death of our former monarch, a regency has taken control of our government. Since then, it is not the regent who rules over [Root.GetName], but rather the [Root.GetAdjective] Nobility.\n\nTo protect themselves against any restrictions of their privileges by future monarchs, they have now addressed a petition to us. They demand the establishment of a permanent parliament with the right to veto the monarchs' decrees.\n\nShould we comply with this, although it would undermine our authority?"
+ FBIA154: "We must accept their demands..."
+ FBIB154: "Their privileges have gotten to their heads!"
  devotion_events.10.dd: "A key element of our succession is the relationship between the master (Murshid) and student. It took much training, but [Root.Monarch.GetTitle] [Root.Monarch.GetName] has succeeded in making [Root.Heir.GetName] efface [Root.Heir.GetHerHis] former life of noble decadence and fully embrace the ascetic tenets of our state."
  devotion_events.11.dd: "When a neighboring noble sent his child to be the student of [Root.Monarch.GetTitle] [Root.Monarch.GetName], he probably expected to never hear from [Root.Heir.GetHerHim] again. Yet [Root.Heir.GetName] has already succeeded in spreading the word of [Root.Heir.GetHerHis] Murshid far and wide, including in [Root.Heir.GetHerHis] home nation."
  devotion_events.12.dd: "Some were skeptical at the choice of a rich merchant's son as the designated successor to [Root.Monarch.GetName], but many of the greatest ascetics - indeed, Prophet Muhammad himself! - were originally merchants. [Root.Heir.GetName] has proven [Root.Heir.GetHerHis] worthiness by donating all of [Root.Heir.GetHerHis] riches to the fisc."
