@@ -2610,6 +2610,10 @@
  FBIB153: "Werdet ein Ritterorden"
  FBIC153: "Werdet ein Bistum"
  FBIDD153: "Widerruft die Umstrukturierung"
+ FBIT154: "Ein großér Sejm für [Root.GetName]?"
+ FBID154: "Nach dem Tod unseres früheren Monarchen hat eine Regentschaft die Kontrolle über unsere Regierung übernommen. Seitdem regiert nicht mehr der Regent über [Root.GetName], sondern vielmehr der [Root.GetAdjective]e Adel.\n\nUm sich gegen etwaige Einschränkungen ihrer Privilegien durch künftige Monarchen zu schützen, haben sie nun eine Petition an uns gerichtet. Sie fordern die Einrichtung eines permanenten Parlaments mit einem Vetorecht gegen die Dekrete der Monarchen.\n\nSollten wir dem nachkommen, obwohl dies unsere Autorität untergraben würde?"
+ FBIA154: "Wir müssen ihre Forderungen akzeptieren..."
+ FBIB154: "Ihre Privilegien sind ihnen zu Kopf gestiegen!"
  devotion_events.10.dd: "Ein Schlüsselelement unserer Nachfolge ist die Beziehung zwischen dem Meister (Murshid) und dem Schüler. Es bedurfte eines langen Trainings, aber es ist [Root.Monarch.GetTitle] [Root.Monarch.GetName] gelungen, [Root.Heir.GetName] dazu zu bringen, [Root.Heir.GetHerHis] früheres Leben der adligen Dekadenz zu überwinden und die asketischen Lehren unseres Staates vollständig zu übernehmen."
  devotion_events.11.dd: "Als ein benachbarter Adliger sein Kind zum Schüler von [Root.Monarch.GetTitle] [Root.Monarch.GetName] machte, erwartete er wahrscheinlich, nie wieder von [Root.GetHihmihr] zu hören. Und doch ist es [Root.Heir.GetName] bereits gelungen, das Wort [Root.Heir.GetHerHis]es Murshid weit und breit zu verbreiten, auch in [Root.Heir.GetHerHis]em Heimatland."
  devotion_events.12.dd: "Einige waren skeptisch bei der Wahl des Sohnes eines reichen Kaufmanns als designierter Nachfolger von [Root.Monarch.GetName], aber viele der größten Asketen - in der Tat der Prophet Muhammad selbst! - waren ursprünglich Kaufleute. [Root.Heir.GetName] hat [Root.Heir.GetHerHis]e Würdigkeit bewiesen, indem er all [Root.Heir.GetHerHis]e Reichtümer dem Fiskus schenkte."
