@@ -17,6 +17,7 @@
 -Added factions to Jerusalem: the Patriarchate, the Settlers, the Barons; Jerusalem now gets a parliament
 -Added the following new mercenary companies: Castilian Caballeros
 -Added a decision for Catholic theocracies to change their Tier 1 reform for the cost of papal influence
+-Added an event for Poland to get the Polish Great Sejm reform if started as a base monarchy
 -Gave Circassia access to reskinned Mossi mechanics from Origins
 -Gave Volga Bulgaria access to reskinned Jolof mechanics from Origins
 -Gave East Slavic nations access to the 'Tolerance of Folk Religions' estate privilege
